--- a/tachibanacap/templates/tachihome.html
+++ b/tachibanacap/templates/tachihome.html
@@ -10,6 +10,19 @@
     <title>Tachibana</title>
 </head>
     <body>
+        <p>Hello!</p>
+        <div id='tachihome'>
         {% csrf_token %}
+        <div class='searchbar'></div>
+            <input type='text' v-model='searchbar'>
+        
         {% if user.is_authenticated %}
-            
+        <div class='fpage'></div>
+        {% endif %}
+        </div>
+        
+        <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="{% static 'tachihome.js'%}"></script>
+    </body>
+</head>
