--- a/tachibanacap/templates/registration/login.html
+++ b/tachibanacap/templates/registration/login.html
@@ -14,7 +14,7 @@
             <form action='' method='post'>
                 {% csrf_token %}
                 {{ form.as_p }}
-                <imput type='submit' value='login'>
+                <input type='submit' value='Login'>
             </form>        
     </body>
 </html>
