--- a/tachibanacap/templates/tachihome.html
+++ b/tachibanacap/templates/tachihome.html
@@ -28,10 +28,11 @@
         <div class='box' v-if='home'>
             <div class='page' v-for='page in home'>
                 <div class='post' v-for='post in page.post_detail'>
-                    <span v-if='page.top_image'><img class='pageimg' :src='page.top_image' alt='o-SATAN-ART-facebook.jpg'><button class='pagename'  @click='loadpage(page)'>[[page.name]]</button></img> Posted by <span v-if='post.user_detail.username'><a :href='post.user_detail.id'>[[post.user_detail.username]]</a></span></span>
-                    <span v-if='post.title'><h1><a :href='post.id'>[[post.title]]</a></h1></span>
+                    <span v-if='page.top_image'><img class='pageimg' :src='page.top_image' alt='o-SATAN-ART-facebook.jpg'><button class='pagename' @click='loadpage(page)'>[[page.name]]</button></img> Posted by <span v-if='post.user_detail.username'><a :href='post.user_detail.id'>[[post.user_detail.username]]</a></span></span>
+                    <span v-if='post.title'><h1><button @click='loadpost(post)'>[[post.title]]</a></h1></span>
                     <span v-if='post.image_head'><img class='postimg' :src='post.image_head'></span>
                     <span v-if='post.body'><p>[[post.body]]</p></span>
+                </div>
             </div>
         </div>
         <div class='box' v-if='loadedpage'>
@@ -43,6 +44,17 @@
                     <span v-if='post.title'><h1><a :href='post.id'>[[post.title]]</a></h1></span>
                     <span v-if='post.image_head'><img class='postimg' :src='post.image_head'></span>
                     <span v-if='post.body'><p>[[post.body]]</p></span>
+                </div>
+            </div>
+        </div> 
+        <div class='box' v-if='loadedpost'>
+            <div class='page'>
+                <div class='post'>
+                    <span v-if='loadedpost.author'> Posted by <span v-if='loadedpost.user_detail.username'><a :href='loadedpost.user_detail.id'>[[loadedpost.user_detail.username]]</a></span></span>
+                    <span v-if='loadedpost.title'><h1><a @click='loadedpost(post)'>[[loadedpost.title]]</a></h1></span>
+                    <span v-if='loadedpost.image_head'><img class='postimg' :src='loadedpost.image_head'></span>
+                    <span v-if='loadedpost.body'><p>[[loadedpost.body]]</p></span>
+                </div>
             </div>
         </div>    
             {% if user.is_authenticated %}
