--- a/tachibanacap/static/tachihome.css
+++ b/tachibanacap/static/tachihome.css
@@ -21,10 +21,13 @@ p {
 }
 
 .pagename {
-    padding-left: 5px;
-    padding-top: 40px;
+    background-color: grey;
+
+    margin-left: 12px;
     text-align: center;
-    font-size: 16px; 
+    font-size: 16px;
+    border-color: grey;
+    box-shadow: 1px 1px 1px 1px yellow; 
 }
 
 .postimg {
