--- a/tachibanacap/static/login.css
+++ b/tachibanacap/static/login.css
@@ -1,6 +1,9 @@
 html {
     box-sizing: border-box;
-    background-color: rgb(153, 153, 153)
+    background-color: rgb(153, 153, 153);
+    background-image: url('http://127.0.0.1:8000/media/oranges-in-a-box.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 *,*::before,*::after {
@@ -19,6 +22,10 @@ form {
 
 input[type='submit'] {
     margin-left: 15%
+}
+label {
+    background-color: rgba(255, 192, 203, 0.697);
+    padding: 4px;
 }
 
 h1 {
