--- a/tachibanacap/static/tachihome.css
+++ b/tachibanacap/static/tachihome.css
@@ -1,6 +1,9 @@
 html {
     box-sizing: border-box;
+    background-image: url('http://127.0.0.1:8000/media/oranges-in-a-box.jpg');
+    
 }
+
 
 *,*::before,*::after {
         box-sizing: inherit;
@@ -31,18 +34,22 @@ p {
 }
 
 .postimg {
-    width: 20%;
-    height: 20%;
+    width: 60%;
+    height: 60%;
 
 }
 
 .page {
     
 }
+p {
+    font-size: 24px;
+}
 .post {
     max-width: 80%;
     max-height: 20%;
     border-style: solid;
+    font-size: 24px;
     border-color: black;
     border-radius: 16px;
     background-color: grey;
@@ -53,6 +60,8 @@ p {
 .topbar {
     background-color: #333;
     overflow: hidden;
+    position: absolute;
+    max-width: 100%;
 
 }
 
